--- a/src/style/work_klk.css
+++ b/src/style/work_klk.css
@@ -22,14 +22,9 @@ body {
 
 .klk_image_box {
   position: relative;
-  width: 1200px;
-  height: 900px;
+  width: 1000px;
+  height: 800px;
   cursor: pointer;
-  transition: transform 0.3s ease;
-}
-
-.klk_image_box:hover {
-  transform: scale(1.02);
 }
 
 /* Object 스타일 및 애니메이션 */
@@ -148,15 +143,18 @@ body {
 }
 
 .klk_full_image {
-  max-width: 90%;
-  max-height: 90%;
-  background-color: #fff;
-  padding: 20px;
+  max-width: 95%;
+  max-height: 95vh;
+  /* background-color: #fff; */
+  padding: 15px;
   border-radius: 10px;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
   transform: scale(0.8);
   transition: transform 0.4s ease;
-  pointer-events: none; /* 내부 요소는 마우스 이벤트 무시 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
 }
 
 .klk_full_image_box.active .klk_full_image {
@@ -167,7 +165,8 @@ body {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  pointer-events: none; /* 이미지도 마우스 이벤트 무시 */
+  max-height: 95vh;
+  pointer-events: none;
 }
 
 /* 애니메이션 정의 */
